--- a/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.tpl.html
+++ b/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.tpl.html
@@ -1,5 +1,5 @@
 <div class="function-from-template-content">
-    <form name="$ctrl.functionFromTemplateForm" class="configuration-form">
+    <form name="$ctrl.functionFromTemplateForm" class="configuration-form" novalidate>
         <div class="function-name-wrapper">
             <div class="function-name">
                 <span class="input-label">Name*</span>
@@ -10,9 +10,14 @@
                                             data-validation-is-required="true"
                                             data-form-object="$ctrl.functionFromTemplateForm"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
-                                            data-validation-pattern="ctrl.validationPatterns.functionName"
+                                            data-validation-pattern="$ctrl.validationPatterns.functionName"
+                                            data-validation-max-length="{{$ctrl.validationPatterns.getMaxLength('function.name')}}"
+                                            data-hide-counter="false"
                                             data-input-model-options="$ctrl.inputModelOptions"
-                                            data-placeholder-text="Type function name"></igz-validating-input-field>
+                                            data-placeholder-text="Type function name"
+                                            data-tooltip="Name must be 1-63 characters long, consisting of digits, lower-case letters and hyphens only. It cannot start or end with a hyphen."
+                                            data-tooltip-popup-delay="500"
+                                            data-tooltip-append-to-body="true"></igz-validating-input-field>
             </div>
         </div>
     </form>
