IG-1848 [nuclio] Should show "Actions" after selecting an action

--- a/src/nuclio/projects/project/functions/version/version.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version.tpl.html
@@ -8,9 +8,9 @@
                 <igz-default-dropdown data-select-property-only="id"
                                       data-placeholder="ACTIONS"
                                       data-values-array="$ctrl.actions"
-                                      data-selected-item="$ctrl.action"
                                       data-is-disabled="!$ctrl.isFunctionDeployed"
-                                      data-item-select-callback="$ctrl.onSelectAction(item)">
+                                      data-item-select-callback="$ctrl.onSelectAction(item)"
+                                      data-skip-selection="true">
                 </igz-default-dropdown>
             </div>
             <div class="actions-bar-left actions-buttons-block">
