--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -46,6 +46,19 @@
                                             class="nuclio-validating-input build-command-field">
                 </igz-validating-input-field>
             </div>
+            <div class="igz-col-100 build-field">
+                <div class="field-label">Dependencies</div>
+                <igz-validating-input-field data-field-type="textarea"
+                                            data-input-name="dependencies"
+                                            data-input-value="$ctrl.buildDependencies"
+                                            data-is-focused="false"
+                                            data-form-object="$ctrl.buildForm"
+                                            data-placeholder-text="Type ..."
+                                            data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
+                                            data-update-data-field="dependencies"
+                                            class="nuclio-validating-input build-dependencies-field">
+                </igz-validating-input-field>
+            </div>
             <div class="igz-col-100 build-field files-field">
                 <div class="uploading-files">
                     <div class="uploading-proccess-wrapper"
