--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -37,7 +37,7 @@
                 <div class="field-label">Build commands</div>
                 <igz-validating-input-field data-field-type="textarea"
                                             data-input-name="commands"
-                                            data-input-value="$ctrl.buildCommands"
+                                            data-input-value="$ctrl.build.commands"
                                             data-is-focused="false"
                                             data-form-object="$ctrl.buildForm"
                                             data-placeholder-text="Type ..."
@@ -50,7 +50,7 @@
                 <div class="field-label">Dependencies</div>
                 <igz-validating-input-field data-field-type="textarea"
                                             data-input-name="dependencies"
-                                            data-input-value="$ctrl.buildDependencies"
+                                            data-input-value="$ctrl.build.dependencies"
                                             data-is-focused="false"
                                             data-form-object="$ctrl.buildForm"
                                             data-placeholder-text="Type ..."
