--- a/src/nuclio/projects/project/functions/version/version-monitoring/version-monitoring.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-monitoring/version-monitoring.tpl.html
@@ -42,7 +42,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row" data-ng-if="$ctrl.version.ui.deployResult.status.state === 'error'">
+            <div class="row" data-ng-if="$ctrl.version.status.state === 'error'">
                 <div class="monitoring-block ncl-monitoring-error-logger">
                     <span class="icon-collapsed general-content"
                           data-ng-class="$ctrl.rowIsCollapsed.errorLog ? 'igz-icon-right' : 'igz-icon-down'"
@@ -54,7 +54,7 @@
                              data-ng-scrollbars
                              data-ng-scrollbars-config="$ctrl.scrollConfig">
                             <div class="log-entry">
-                                <span class="log-entry-error"> {{$ctrl.version.ui.deployResult.status.message}}</span>
+                                <span class="log-entry-error"> {{$ctrl.version.status.message}}</span>
                             </div>
                         </div>
                     </div>
