IG-1878 [Nuclio] Can't scroll Status tab

--- a/src/nuclio/projects/project/functions/version/version-monitoring/version-monitoring.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-monitoring/version-monitoring.tpl.html
@@ -1,4 +1,4 @@
-<div class="ncl-version-monitoring ncl-version">
+<div class="ncl-version-monitoring ncl-version" data-igz-extend-background>
     <div class="igz-scrollable-container"
          data-ng-scrollbars
          data-ng-scrollbars-config="$ctrl.scrollConfig">
