--- a/src/nuclio/projects/project/functions/create-function/create-function.tpl.html
+++ b/src/nuclio/projects/project/functions/create-function/create-function.tpl.html
@@ -65,6 +65,8 @@
             </ncl-function-from-scratch>
 
             <ncl-function-from-template data-ng-if="$ctrl.isTypeSelected('from_template')"
+                                        data-get-function-templates="$ctrl.getFunctionTemplates()"
+                                        data-templates="$ctrl.templates"
                                         data-toggle-splash-screen="$ctrl.toggleSplashScreen(value)"
                                         data-project="$ctrl.project">
             </ncl-function-from-template>
