--- a/src/nuclio/projects/projects.tpl.html
+++ b/src/nuclio/projects/projects.tpl.html
@@ -92,6 +92,8 @@
                                 <ncl-projects-table-row data-igz-resizable-row-cells
                                                         data-project="project"
                                                         data-projects-list="$ctrl.projects"
+                                                        data-delete-project-callback="$ctrl.deleteProject(project)"
+                                                        data-update-project-callback="$ctrl.updateProject(project)"
                                                         data-action-handler-callback="$ctrl.handleAction(actionType, checkedItems)"></ncl-projects-table-row>
                             </div>
                         </div>
