new test event pane

--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -107,4 +107,6 @@
             </form>
         </div>
     </div>
+
+    <ncl-function-event-pane data-version="$ctrl.version"></ncl-function-event-pane>
 </div>
