--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
@@ -11,6 +11,7 @@
             <div class="table-body" data-ng-repeat="variable in $ctrl.variables track by $index">
                 <ncl-key-value-input class="new-label-input"
                                      data-list-class="ncl-version-configuration-environment-variables"
+                                     data-change-state-broadcast="change-state-deploy-button"
                                      data-row-data="variable"
                                      data-item-index="$index"
                                      data-use-type="true"
@@ -25,6 +26,7 @@
             <div class="table-body" data-ng-repeat="variable in $ctrl.variables track by $index">
                 <ncl-key-value-input class="new-label-input"
                                      data-list-class="scrollable-environment-variables"
+                                     data-change-state-broadcast="change-state-deploy-button"
                                      data-row-data="variable"
                                      data-item-index="$index"
                                      data-use-type="true"
