--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-labels/version-configuration-labels.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-labels/version-configuration-labels.tpl.html
@@ -9,6 +9,7 @@
             <div class="table-body" data-ng-repeat="label in $ctrl.labels">
                 <ncl-key-value-input class="new-label-input"
                                      data-list-class="ncl-version-configuration-labels"
+                                     data-change-state-broadcast="change-state-deploy-button"
                                      data-row-data="label"
                                      data-item-index="$index"
                                      data-use-type="false"
@@ -24,6 +25,7 @@
             <div class="table-body" data-ng-repeat="label in $ctrl.labels">
                 <ncl-key-value-input class="new-label-input"
                                      data-list-class="scrollable-labels"
+                                     data-change-state-broadcast="change-state-deploy-button"
                                      data-row-data="label"
                                      data-item-index="$index"
                                      data-use-type="false"
