--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.tpl.html
@@ -50,6 +50,7 @@
                 <div class="table-body" data-ng-repeat="attribute in $ctrl.attributes">
                     <ncl-key-value-input class="new-label-input"
                                          data-row-data="attribute"
+                                         data-change-state-broadcast="change-state-deploy-button"
                                          data-use-type="false"
                                          data-action-handler-callback="$ctrl.handleAction(actionType, checkedItem)"
                                          data-change-data-callback="$ctrl.onChangeData(newData)"></ncl-key-value-input>
