removing dist folder

--- a/src/nuclio/projects/project/functions/create-function/create-function.tpl.html
+++ b/src/nuclio/projects/project/functions/create-function/create-function.tpl.html
@@ -65,7 +65,7 @@
             </ncl-function-from-scratch>
 
             <ncl-function-from-template data-ng-if="$ctrl.isTypeSelected('from_template')"
-                                        data-get-function-templates="$ctrl.getFunctionTemplates()"
+                                        data-get-function-templates="$ctrl.getTemplates()"
                                         data-templates="$ctrl.templates"
                                         data-toggle-splash-screen="$ctrl.toggleSplashScreen(value)"
                                         data-project="$ctrl.project">
