--- a/src/nuclio/projects/project/functions/functions.tpl.html
+++ b/src/nuclio/projects/project/functions/functions.tpl.html
@@ -122,7 +122,7 @@
                                                                  data-external-address="$ctrl.externalIPAddress"
                                                                  data-functions-list="$ctrl.functions"
                                                                  data-action-handler-callback="$ctrl.handleAction(actionType, checkedItems)"
-                                                                 data-delete-function-callback="$ctrl.deleteFunction(functionData)">
+                                                                 data-handle-delete-function="$ctrl.deleteFunction({functionData: functionData})">
                                     </ncl-function-collapsing-row>
                                 </div>
                             </div>
