Impl IG-1742 [Nuclio] Implement Nuclio API for Iguazio (#176)

--- a/src/nuclio/projects/project/functions/functions.tpl.html
+++ b/src/nuclio/projects/project/functions/functions.tpl.html
@@ -121,7 +121,8 @@
                                                                  data-is-splash-showed="$ctrl.isSplashShowed"
                                                                  data-external-address="$ctrl.externalIPAddress"
                                                                  data-functions-list="$ctrl.functions"
-                                                                 data-action-handler-callback="$ctrl.handleAction(actionType, checkedItems)">
+                                                                 data-action-handler-callback="$ctrl.handleAction(actionType, checkedItems)"
+                                                                 data-handle-delete-function="$ctrl.deleteFunction({functionData: functionData})">
                                     </ncl-function-collapsing-row>
                                 </div>
                             </div>
