--- a/src/nuclio/projects/project/functions/version/function-event-dialog/function-event-dialog.tpl.html
+++ b/src/nuclio/projects/project/functions/version/function-event-dialog/function-event-dialog.tpl.html
@@ -38,11 +38,11 @@
                 <div class="field-content">
                     <igz-validating-input-field class="nuclio-validating-input"
                                                 data-field-type="input"
-                                                data-input-name="x-nuclio-path"
+                                                data-input-name="path"
                                                 data-input-model-options="$ctrl.inputModelOptions"
-                                                data-input-value="$ctrl.workingCopy.spec.attributes.headers['x-nuclio-path']"
+                                                data-input-value="$ctrl.workingCopy.spec.attributes.path"
                                                 data-form-object="$ctrl.functionEventForm"
-                                                data-update-data-callback="$ctrl.inputValueCallback(newData, 'x-nuclio-path')"
+                                                data-update-data-callback="$ctrl.inputValueCallback(newData, 'path')"
                                                 data-placeholder-text="Type a path">
                     </igz-validating-input-field>
                 </div>
