Fix [Nuclio] Wrong API calls/parsing
- Remove `ui` and `$$hashKey` properties from project update request
- Shift `created_by` and `created_date` on project update to demo mode
- Fix error handling (assumed Iguazio error JSON-API structure)
- Do not display invocation URL if external IP address not defined
- Do not display an alert message if exernal IP address not fetched
- Omit `spec.loggerSinks` property of function on deploy in non-demo
- Parsing of function invocation response was reworked a bit
- Some general cleanup

--- a/src/nuclio/projects/project/functions/version/version.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version.tpl.html
@@ -105,7 +105,7 @@
             <span class="result-status-icon"
                   data-ng-class="$ctrl.isInvocationSuccess ? 'igz-icon-tick-round' : 'igz-icon-block'">
             </span>
-                <span class="result-state">Response: {{$ctrl.testResult.status.statusText}}</span>
+                <span class="result-state">Response: {{$ctrl.testResult.statusText}}</span>
             </div>
 
             <div class="ncl-execution-result-block">
@@ -120,7 +120,7 @@
                 <div class="collapsed-block-content-wrapper" data-collapse="$ctrl.rowIsCollapsed.statusCode">
                     <div class="value-row"
                          data-ng-class="{'failed' : !$ctrl.isInvocationSuccess}">
-                        {{$ctrl.testResult.status.statusCode}} {{$ctrl.testResult.status.statusText}}
+                        {{$ctrl.testResult.status}} {{$ctrl.testResult.statusText}}
                     </div>
                 </div>
             </div>
