--- a/src/nuclio/projects/projects.tpl.html
+++ b/src/nuclio/projects/projects.tpl.html
@@ -87,7 +87,7 @@
                     <div class="igz-scrollable-container"
                          data-ng-scrollbars
                          data-ng-hide="$ctrl.searchStates.searchNotFound && $ctrl.searchStates.searchInProgress">
-                        <div data-ng-repeat="project in $ctrl.projects">
+                        <div data-ng-repeat="project in $ctrl.projects track by project.metadata.name">
                             <div data-igz-show-hide-search-item="project">
                                 <ncl-projects-table-row data-igz-resizable-row-cells
                                                         data-project="project"
