Fix [Nuclio] Various issues when integrating with Iguazio
- Remove `ui` property on project update
- Shift `created_by` and `created_date` properties on project update to
  demo-mode only
- Rename `spec.disable` to `spec.disabled` in function model
- Shift `spec.timeoutSeconds` in function model to demo-mode only
- If external IP address cannot be retrieved, display "N/A" for
  invocation URL

--- a/src/nuclio/projects/project/functions/version/version-monitoring/version-monitoring.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-monitoring/version-monitoring.tpl.html
@@ -6,11 +6,13 @@
             <div class="row">
                 <div class="monitoring-block">
                     <span class="monitoring-block-title">Invocation URL:</span>
-                    <a data-ng-if="$ctrl.version.status.state === 'ready'"
+                    <a data-ng-if="$ctrl.version.status.state === 'ready' && $ctrl.version.ui.invocationURL !== ''"
                        class="monitoring-invocation-url"
                        href="{{$ctrl.version.ui.invocationURL}}">
                         {{$ctrl.version.ui.invocationURL}}
                     </a>
+                    <span data-ng-if="$ctrl.version.status.state === 'ready' && $ctrl.version.ui.invocationURL === ''"
+                          class="monitoring-invocation-field-invalid">N/A</span>
                     <span data-ng-if="$ctrl.version.status.state !== 'ready'"
                           class="monitoring-invocation-field-invalid">Not yet deployed</span>
                 </div>
