--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -107,4 +107,6 @@
             </form>
         </div>
     </div>
+
+    <function-events-data-wrapper data-version="$ctrl.version"></function-events-data-wrapper>
 </div>
