--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/test-events-logs/test-events-logs.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/test-events-logs/test-events-logs.tpl.html
@@ -39,5 +39,5 @@
         </div>
     </div>
     <div class="no-logs"
-         data-ng-if="$ctrl.logs.length === 0">No logs has been found...</div>
+         data-ng-if="$ctrl.logs.length === 0">No logs have been found...</div>
 </div>
