--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
@@ -33,12 +33,13 @@
                 </div>
                 <div class="list-item text-ellipsis"
                      data-ng-if="$ctrl.selectedLeftBarTab.id === 'history'"
-                     data-ng-repeat="savedEvent in $ctrl.history | orderBy:'-'">
+                     data-ng-repeat="savedEvent in $ctrl.history | orderBy:'-'"
+                     data-ng-click="$ctrl.selectEvent(savedEvent)">
                     <span class="method-icon"
-                          data-ng-style="{'background-color': $ctrl.getMethodColor(savedEvent.method)}">
-                        {{savedEvent.method}}
+                          data-ng-style="{'background-color': $ctrl.getMethodColor(savedEvent.spec.attributes.method)}">
+                        {{savedEvent.spec.attributes.method}}
                     </span>
-                    {{savedEvent.path === '' ? '/' : savedEvent.path}}
+                    {{savedEvent.spec.attributes.path === '' ? '/' : savedEvent.spec.attributes.path}}
                 </div>
             </div>
         </div>
@@ -46,7 +47,7 @@
     <div class="igz-scrollable-container main-section-wrapper"
          data-ng-scrollbars
          data-ng-scrollbars-config="$ctrl.scrollConfig">
-        <form name="$ctrl.headersForm">
+        <form name="$ctrl.testEventsForm">
             <div class="main-header">
                 <div class="left-side-elements">
                 <span class="igz-icon-hamburger-menu"
@@ -56,7 +57,7 @@
                                              data-model-options="{allowInvalid:true}"
                                              data-on-change="$ctrl.inputValueCallback(item, 'spec.displayName')"
                                              data-input-name="nameInput"
-                                             data-form-object="$ctrl.headersForm"
+                                             data-form-object="$ctrl.testEventsForm"
                                              data-required="true"
                                              data-placeholder="Event name..."
                                              data-read-only="true"
@@ -65,7 +66,11 @@
                 </div>
 
                 <div class="right-side-elements">
-                    <div class="new-test-event" data-ng-click="$ctrl.resetData()">
+                    <div class="new-test-event"
+                         data-ng-click="$ctrl.resetData()"
+                         data-tooltip="New test"
+                         data-tooltip-popup-delay="300"
+                         data-tooltip-placement="left">
                         <span class="ncl-icon-add"></span>
                     </div>
                     <div class="igz-button-primary"
@@ -284,6 +289,7 @@
                                             data-selected-theme="'vs-light'"
                                             data-show-line-numbers="true"
                                             data-mini-monaco="true"
+                                            data-no-top-padding="true"
                                             data-name="eventResponseBody"
                                             data-read-only="true"></ncl-monaco>
                             </div>
@@ -302,7 +308,8 @@
                             <div class="text-ellipsis labels"
                                  data-tooltip="{{key}}"
                                  data-tooltip-placement="left"
-                                 data-tooltip-popup-delay="300">{{key}}</div>
+                                 data-tooltip-popup-delay="300"
+                                 data-tooltip-append-to-body="true">{{key}}</div>
                             <div class="text-ellipsis values"
                                  data-tooltip="{{value}}"
                                  data-tooltip-placement="left"
