Few visual fixes and cleanup
- Rename `canceller` to `canceler`
- Fix visual issues with fields borders flickr
- Fix tooltip flickr of "New Test" button

--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
@@ -70,7 +70,8 @@
                          data-ng-click="$ctrl.resetData()"
                          data-tooltip="New test"
                          data-tooltip-popup-delay="300"
-                         data-tooltip-placement="left">
+                         data-tooltip-placement="left"
+                         data-tooltip-append-to-body="true">
                         <span class="ncl-icon-add"></span>
                     </div>
                     <div class="igz-button-primary"
